# MACH-INE-II

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE-TASKS-BUGFIX-MIN24.md  CODE-TASKS-COMPOSITIVE.md  CODE-TASKS-INFRA.md  DESIGN.md  ENGINES_SPEC.md  HANDOFF.md  MACHINE-II.command  README.md  ROADMAP-VISUAL.md  ROADMAP-v2.9.md  ROADMAP.md  RULES.md  SALVAGE.md  SESSION-VISUAL-NEXT.md  TASK-v0.2.0.md  TASK-v0.4.0.md  TASK-v0.7.0.md  VISION-V4.md  api_server.py  audio_analyzer.py  index.html  launch.command  launch.sh  manifest.json  projector.html  proto-scena-madre.html  proto-solco.html  sc-launch.command  start.sh  sw.js  vocal_melody.mid
.obsidian/: app.json
.planning-archive/: GSD-history.txt
_brain/: Home.md
bridge/: machine-sc-bridge.js  package.json
docs/: 00-VISION.md  01-ARCHITECTURE.md  02-MUSIC.md  03-VISUAL.md  04-RULES.md  05-ROADMAP.md  06-AGENTS.md  07-ARTISTIC-GAPS.md  BIOMI-BOZZE.md  DECISIONS.md  MANUALE-3D.md  MOOD.md  STATUS.md  V3.18-AUDIT.md  VISUAL-SPEC.md  VISUAL-VISION.md  WORKLOG-archive-Q1-2026.md  WORKLOG.md
juce_plugin/: CMakeLists.txt
juce_plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
midi/: MACHINE_II_elettronica (1).mid  MACHINE_II_postrock (1).mid
new/: CLAUDE_CODE_BRIEFING.md  DESIGN.md  MACHINE_II_session_export.md  README.md  ROADMAP.md
sc/: biome-presets.scd  machine-engine.scd  osc-map.md
scripts/: health-check.sh  snapshot.sh
src/: VERSION.js  audio.js  bass-v2.js  bass-v3.js  bass.js  biomi.js  camera.js  campo.js  colors.js  comp-griglia.js  comp-liminale.js  comp-linee.js  comp-negativo.js  comp-quadrati.js  comp-solco.js  comp-treno.js  composer.js  composer2.js  composer3.js  composer4.js  composer5.js  composer6.js  composer7.js  composition-toolkit.js  config.js  designer.js  director.js  director3.js  dna.js  encore-canon.js  event-register.js  field.js  firma.js  generations.js  geo.js  harmony-layer.js  harmony.js  layers.js  macro-composer.js  main.js  (+25 more)
versions/: sandbox-v0.5.0.html  v0.1.0.html  v0.8.0-colors.js  v0.8.0-config.js  v0.8.0-director.js  v0.8.0-field.js  v0.8.0-generations.js  v0.8.0-main.js  v0.8.0-state.js  v1.3.0-colors.js  v1.3.0-director-events.js  v1.3.0-director.js  v1.3.0-main.js  v1.3.0-midi-clock.worker.js  v1.3.0-midi-patterns.js  v1.3.0-render.js  v1.5.0-director.js  v1.5.0-field.js  v1.5.0-index.html  v1.5.0-main.js  v1.6.0-composer2.js  v1.6.0-composer5.js  v1.6.0-midi.js  v2.7.0-colors.js  v2.7.0-composer.js  v2.7.0-composer3.js  v2.7.0-composer4.js  v2.7.0-composer5.js  v2.7.0-config.js  v2.7.0-director.js  v2.9.3-harmony-layer.js  v2.9.3-macro-composer.js  v2.9.3-render.js  v2.9.3-rhythm-layer.js  v2.9.3-sequencer.js
(+271 files in other folders)
